--- a/src/client/src/css/Member.module.css
+++ b/src/client/src/css/Member.module.css
@@ -7,14 +7,14 @@
 }
 
 .container {
-  min-height: calc(100% - 100px);
+  height: 100%;
   width: 100%;
-  margin-bottom: 100px;
   margin: auto;
   display: flex;
   flex-direction: column;
   align-items: center;
   text-align: center;
+  overflow-x: hidden;
 }
 
 .header {
@@ -37,8 +37,8 @@
 
 .mergeRequestsContainer {
   display: flex;
-  width: 80%;
-  height: 1000px;
+  width: calc(100% - 40px);
+  height: 100%;
   margin: auto;
   padding: 0px 20px;
 }
